--- a/.github/workflows/js-css-coding-standards.yml
+++ b/.github/workflows/js-css-coding-standards.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup proper Node.js version
         uses: actions/setup-node@v4
         with:
-          node-version-file: 'package.json'
+          node-version-file: 'wp-content/package.json'
 
       - name: Install dependencies
         run: npm ci
